--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint src/**/*.{tsx, ts,json}"
   },
   "dependencies": {
+    "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.14.2",
     "semver": "^7.5.3",
     "styled-components": "^5.3.9"
   },
