--- a/package.json
+++ b/package.json
@@ -10,26 +10,24 @@
     "lint": "eslint src/**/*.{tsx, ts,json}"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "semver": "^7.5.3",
-    "styled-components": "^5.3.9"
+    "@hello-pangea/dnd": "^16.6.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.21.4",
-    "@types/react": "^18.0.28",
-    "@types/react-beautiful-dnd": "^13.1.4",
-    "@types/react-dom": "^18.0.11",
-    "@types/styled-components": "^5.1.26",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.37.0",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^3.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.3.9"
+    "typescript": "^5.5.4",
+    "vite": "^5.4.0"
   }
 }
